--- a/src/main/fabric8/configmap.yml
+++ b/src/main/fabric8/configmap.yml
@@ -1,5 +1,5 @@
 metadata:
-  namespace: commons
+  namespace: #informar o namespace do Github
   name: ${project.artifactId}
 data:
   pubsub.antifraude.topic: antifraude-in
@@ -12,4 +12,4 @@ data:
   pubsub.pagamentos.subscriptionId: pagamentos-out
   pubsub.validador.topic: validador-in
   pubsub.validador.subscriptionId: validador-out
-  rest.gw.pagamentos.endpoint: http://api-apix.sensedia.com/api-pagamento/v1/debitos
+  rest.gw.pagamentos.endpoint: http://api-apix.sensedia.com/api-pagamento/v1/debitos # informar a url do serviço de banco fisico
